--- a/assignment1/features.ipynb
+++ b/assignment1/features.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -108,11 +108,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done extracting features for 1000 / 49000 images\n",
+      "Done extracting features for 2000 / 49000 images\n",
+      "Done extracting features for 3000 / 49000 images\n",
+      "Done extracting features for 4000 / 49000 images\n",
+      "Done extracting features for 5000 / 49000 images\n",
+      "Done extracting features for 6000 / 49000 images\n",
+      "Done extracting features for 7000 / 49000 images\n",
+      "Done extracting features for 8000 / 49000 images\n",
+      "Done extracting features for 9000 / 49000 images\n",
+      "Done extracting features for 10000 / 49000 images\n",
+      "Done extracting features for 11000 / 49000 images\n",
+      "Done extracting features for 12000 / 49000 images\n",
+      "Done extracting features for 13000 / 49000 images\n",
+      "Done extracting features for 14000 / 49000 images\n",
+      "Done extracting features for 15000 / 49000 images\n",
+      "Done extracting features for 16000 / 49000 images\n",
+      "Done extracting features for 17000 / 49000 images\n",
+      "Done extracting features for 18000 / 49000 images\n",
+      "Done extracting features for 19000 / 49000 images\n",
+      "Done extracting features for 20000 / 49000 images\n",
+      "Done extracting features for 21000 / 49000 images\n",
+      "Done extracting features for 22000 / 49000 images\n",
+      "Done extracting features for 23000 / 49000 images\n",
+      "Done extracting features for 24000 / 49000 images\n",
+      "Done extracting features for 25000 / 49000 images\n",
+      "Done extracting features for 26000 / 49000 images\n",
+      "Done extracting features for 27000 / 49000 images\n",
+      "Done extracting features for 28000 / 49000 images\n",
+      "Done extracting features for 29000 / 49000 images\n",
+      "Done extracting features for 30000 / 49000 images\n",
+      "Done extracting features for 31000 / 49000 images\n",
+      "Done extracting features for 32000 / 49000 images\n",
+      "Done extracting features for 33000 / 49000 images\n",
+      "Done extracting features for 34000 / 49000 images\n",
+      "Done extracting features for 35000 / 49000 images\n",
+      "Done extracting features for 36000 / 49000 images\n",
+      "Done extracting features for 37000 / 49000 images\n",
+      "Done extracting features for 38000 / 49000 images\n",
+      "Done extracting features for 39000 / 49000 images\n",
+      "Done extracting features for 40000 / 49000 images\n",
+      "Done extracting features for 41000 / 49000 images\n",
+      "Done extracting features for 42000 / 49000 images\n",
+      "Done extracting features for 43000 / 49000 images\n",
+      "Done extracting features for 44000 / 49000 images\n",
+      "Done extracting features for 45000 / 49000 images\n",
+      "Done extracting features for 46000 / 49000 images\n",
+      "Done extracting features for 47000 / 49000 images\n",
+      "Done extracting features for 48000 / 49000 images\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.features import *\n",
     "\n",
@@ -151,11 +206,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr 1.000000e-09 reg 1.000000e+05 train accuracy: 0.091510 val accuracy: 0.089000\n",
+      "lr 1.000000e-09 reg 1.000000e+06 train accuracy: 0.102041 val accuracy: 0.102000\n",
+      "lr 1.000000e-09 reg 1.000000e+07 train accuracy: 0.413939 val accuracy: 0.413000\n",
+      "lr 1.000000e-08 reg 1.000000e+05 train accuracy: 0.110102 val accuracy: 0.096000\n",
+      "lr 1.000000e-08 reg 1.000000e+06 train accuracy: 0.414939 val accuracy: 0.418000\n",
+      "lr 1.000000e-08 reg 1.000000e+07 train accuracy: 0.415245 val accuracy: 0.411000\n",
+      "lr 1.000000e-07 reg 1.000000e+05 train accuracy: 0.413327 val accuracy: 0.412000\n",
+      "lr 1.000000e-07 reg 1.000000e+06 train accuracy: 0.406510 val accuracy: 0.405000\n",
+      "lr 1.000000e-07 reg 1.000000e+07 train accuracy: 0.340082 val accuracy: 0.347000\n",
+      "best validation accuracy achieved during cross-validation: 0.418000\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the validation set to tune the learning rate and regularization strength\n",
     "\n",
@@ -177,6 +249,23 @@
     "# with different numbers of bins in the color histogram. If you are careful    #\n",
     "# you should be able to get accuracy of near 0.44 on the validation set.       #\n",
     "################################################################################\n",
+    "for lr in learning_rates:\n",
+    "    for reg in regularization_strengths:\n",
+    "        classifier=LinearSVM()\n",
+    "        classifier.train(X_train_feats,y_train,learning_rate=lr,reg=reg,num_iters=1500)\n",
+    "        y_train_pred = classifier.predict(X_train_feats)\n",
+    "        accuracy_train = np.mean(y_train_pred==y_train)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        pred_y_val = classifier.predict(X_val_feats)\n",
+    "        num_correct = (pred_y_val == y_val)\n",
+    "        accuracy_val = np.mean(num_correct)\n",
+    "        results[(lr,reg)] = accuracy_train,accuracy_val\n",
+    "        \n",
+    "        if accuracy_val>best_val:\n",
+    "            best_val=accuracy_val\n",
+    "            best_svm=classifier\n",
     "pass\n",
     "################################################################################\n",
     "#                              END OF YOUR CODE                                #\n",
