--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -1135,7 +1135,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Iteration 1 / 980) loss: 2.306987\n"
+      "(Iteration 1 / 980) loss: 2.306987\n",
+      "(Epoch 0 / 2) train acc: 0.161000; val_acc: 0.182000\n",
+      "(Iteration 21 / 980) loss: 2.090019\n",
+      "(Iteration 41 / 980) loss: 1.859911\n",
+      "(Iteration 61 / 980) loss: 1.795982\n",
+      "(Iteration 81 / 980) loss: 1.579506\n",
+      "(Iteration 101 / 980) loss: 1.576607\n",
+      "(Iteration 121 / 980) loss: 1.550108\n",
+      "(Iteration 141 / 980) loss: 1.415212\n",
+      "(Iteration 161 / 980) loss: 1.427046\n",
+      "(Iteration 181 / 980) loss: 1.420408\n",
+      "(Iteration 201 / 980) loss: 1.575370\n",
+      "(Iteration 221 / 980) loss: 1.422643\n",
+      "(Iteration 241 / 980) loss: 1.300159\n",
+      "(Iteration 261 / 980) loss: 1.354947\n",
+      "(Iteration 281 / 980) loss: 1.280374\n",
+      "(Iteration 301 / 980) loss: 1.265978\n",
+      "(Iteration 321 / 980) loss: 1.225065\n",
+      "(Iteration 341 / 980) loss: 1.247776\n",
+      "(Iteration 361 / 980) loss: 1.150324\n",
+      "(Iteration 381 / 980) loss: 1.257577\n",
+      "(Iteration 401 / 980) loss: 1.307956\n",
+      "(Iteration 421 / 980) loss: 1.135695\n",
+      "(Iteration 441 / 980) loss: 1.128666\n",
+      "(Iteration 461 / 980) loss: 1.085365\n",
+      "(Iteration 481 / 980) loss: 1.032972\n",
+      "(Epoch 1 / 2) train acc: 0.646000; val_acc: 0.621000\n",
+      "(Iteration 501 / 980) loss: 1.036736\n",
+      "(Iteration 521 / 980) loss: 1.122321\n",
+      "(Iteration 541 / 980) loss: 1.069806\n",
+      "(Iteration 561 / 980) loss: 1.171378\n",
+      "(Iteration 581 / 980) loss: 1.130661\n",
+      "(Iteration 601 / 980) loss: 1.278457\n",
+      "(Iteration 621 / 980) loss: 1.065601\n",
+      "(Iteration 641 / 980) loss: 1.148566\n",
+      "(Iteration 661 / 980) loss: 0.970787\n",
+      "(Iteration 681 / 980) loss: 0.981522\n",
+      "(Iteration 701 / 980) loss: 1.088615\n",
+      "(Iteration 721 / 980) loss: 0.885659\n",
+      "(Iteration 741 / 980) loss: 0.968792\n",
+      "(Iteration 761 / 980) loss: 1.119754\n",
+      "(Iteration 781 / 980) loss: 0.943624\n",
+      "(Iteration 801 / 980) loss: 0.874129\n",
+      "(Iteration 821 / 980) loss: 0.945620\n",
+      "(Iteration 841 / 980) loss: 0.961108\n",
+      "(Iteration 861 / 980) loss: 0.843687\n",
+      "(Iteration 881 / 980) loss: 0.910000\n",
+      "(Iteration 901 / 980) loss: 1.026319\n",
+      "(Iteration 921 / 980) loss: 1.040697\n",
+      "(Iteration 941 / 980) loss: 0.969877\n",
+      "(Iteration 961 / 980) loss: 0.984898\n",
+      "(Epoch 2 / 2) train acc: 0.686000; val_acc: 0.672000\n"
      ]
     }
    ],
@@ -1151,6 +1202,28 @@
     "                },\n",
     "                verbose=True, print_every=20)\n",
     "solver.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.67500000000000004"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solver.check_accuracy(data['X_test'],data['y_test'])"
    ]
   },
   {
